# sanmoku

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cc/: CMakeLists.txt  PyBoard.cpp  README.md  setup.py
cc/include/sammoku/: player.hpp
cc/include/sammoku/core/: board_core.hpp  config.hpp  move.hpp
cc/src/sammoku/core/: board_core.cpp
cc/src/sanmoku/core/: move.cpp
headers/: Board.hpp  BoardConfig.hpp  BoardCore.hpp  Player.hpp
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
python/: Board.py  DataUtil.py  Loggers.py  MakeDataset.py  Model.py  Move.py  MoveHistory.py  play.py  plot.py  train.py
sammoku/include/sammoku/: board.hpp  board_config.hpp  board_core.hpp  player.hpp
sammoku/include/sammoku/core/: color.hpp
sammoku/src/: board.cpp  board_core.cpp  main.cpp  player.cpp
sammoku/src/core/: board_core.cpp
sanmoku_bind/: CMakeLists.txt
sanmoku_bind/cc/: sanmoku.cpp
sanmoku_bind/include/: py_board.hpp
sanmoku_bind/pysrc/: README.md  prepare.py  setup.cfg
sanmoku_bind/pysrc/sammoku/: README.md  move_history.py  sammoku.py
sanmoku_bind/src/: py_board.cpp
src/: Board.cpp  Board.hpp  BoardCore.cpp  DataSaver.cpp  DataSaver.hpp  History.cpp  History.hpp  Model.hpp  Player.cpp  Player.hpp  Position.cpp  Position.hpp  main.cpp
