[metadata]
name = ccsammoku
version = 0.0.1
author = KHML
author_email = 43922054+khml@users.noreply.github.com
description = sammoku library
long_description = file:README.md
url = https://github.com/khml/sanmoku
license = Apache License, Version 2.0
classifier =
    Development Status :: 1 - Planning
    Programming Language :: Python
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
  numpy